create category.html and titles of products

--- a/ecommerce-frontend/category.html
+++ b/ecommerce-frontend/category.html
@@ -22,16 +22,16 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">T-Shirts</a>
+          <a class="nav-link" href="category.html?id=0">T-Shirts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Mugs</a>
+          <a class="nav-link" href="category.html?id=1">Mugs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CDs</a>
+          <a class="nav-link" href="category.html?id=2">CDs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Vinyls</a>
+          <a class="nav-link" href="category.html?id=3">Vinyls</a>
         </li>
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
@@ -43,12 +43,12 @@
   </div>
 </nav>
 
-<div class="container mt-4" id="tshirtList">
-  <h2 class="mb-4">Featured T-Shirts</h2>
+<div class="container mt-4" id="productList">
+  <h2 class="mb-4" id="pageTitle"></h2>
 
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/tshirts.js"></script>
+<script src="js/category.js"></script>
 </body>
 </html>
