--- a/ecommerce-frontend/index.html
+++ b/ecommerce-frontend/index.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="tshirts.html">T-Shirts</a>
+                    <a class="nav-link" href="category.html?id=0">T-Shirts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Mugs</a>
+                    <a class="nav-link" href="category.html?id=1">Mugs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CDs</a>
+                    <a class="nav-link" href="category.html?id=2">CDs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Vinyls</a>
+                    <a class="nav-link" href="category.html?id=3">Vinyls</a>
                 </li>
             </ul>
             <ul class="navbar-nav" style="margin-left: auto;">
@@ -42,8 +42,6 @@
 
 <div class="container mt-4">
     <h2 class="mb-4">Featured Products</h2>
-
-    <!-- Product Cards -->
     <div class="row" id="productList">
     </div>
 </div>
