--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify integrated music shop based on your own taste!</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -19,21 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=0">T-Shirts</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=1">Mugs</a>
+                    <a class="nav-link" href="category.html">T-Shirts</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=2">CDs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=3">Vinyls</a>
-                </li>
+                <!-- Add more navigation links as needed -->
             </ul>
             <ul class="navbar-nav" style="margin-left: auto;">
                 <li class="nav-item">
-                    <a class="nav-link" href="cart.html">Cart</a>
+                    <a class="nav-link" href="art.html">Cart</a>
                 </li>
             </ul>
         </div>
@@ -41,14 +36,18 @@
 </nav>
 
 <div class="container mt-4">
-    <h2 class="mb-4">Featured Products</h2>
-    <div class="row" id="productList">
+    <h2 class="mb-4">Shopping Cart</h2>
+
+    <!-- Cart Items -->
+    <div id="cartItems">
+        <!-- Cart items will be dynamically added here -->
     </div>
+
+    <!-- Checkout Button -->
+    <button class="btn btn-primary mt-3" onclick="checkout()">Checkout</button>
 </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/scripts.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/cart.js"></script>
 </body>
 </html>
-
