--- a/ecommerce-frontend/category.html
+++ b/ecommerce-frontend/category.html
@@ -36,7 +36,7 @@
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item">
-          <a class="nav-link" href="#">Cart</a>
+          <a class="nav-link" href="cart.html">Cart</a>
         </li>
       </ul>
     </div>
@@ -49,6 +49,7 @@
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/category.js"></script>
+<script type="module" src="js/category.js"></script>
+<script type="module" src="js/scripts.js"></script>
 </body>
 </html>
