Change favicon and attempt to configure requests for adding a product to cart and then getting cart items (mission failed, still not fixed)

--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -24,11 +24,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="category.html">T-Shirts</a>
                 </li>
-                <!-- Add more navigation links as needed -->
+                <li class="nav-item">
+                    <a class="nav-link" href="category.html?id=1">Mugs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="category.html?id=2">CDs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="category.html?id=3">Vinyls</a>
+                </li>
             </ul>
             <ul class="navbar-nav" style="margin-left: auto;">
                 <li class="nav-item">
-                    <a class="nav-link" href="art.html">Cart</a>
+                    <a class="nav-link" href="cart.html">Cart</a>
                 </li>
             </ul>
         </div>
