--- a/ecommerce-frontend/index.html
+++ b/ecommerce-frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify integrated music shop based on your own taste!</title>
+    <link rel="icon" href="./images/online-store-icon-15.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -47,6 +48,7 @@
 </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/DOMFunctions.js"></script>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/scripts.js"></script>
 </body>
