--- a/ecommerce-frontend/category.html
+++ b/ecommerce-frontend/category.html
@@ -19,16 +19,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link nav-link-page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="category.html?id=0">T-Shirts</a>
+          <a class="nav-link nav-link-page" href="category.html?id=0">T-Shirts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="category.html?id=1">Mugs</a>
+          <a class="nav-link nav-link-page" href="category.html?id=1">Mugs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="category.html?id=2">CDs</a>
+          <a class="nav-link nav-link-page" href="category.html?id=2">CDs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="category.html?id=3">Vinyls</a>
