--- a/ecommerce-frontend/index.html
+++ b/ecommerce-frontend/index.html
@@ -20,6 +20,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="category.html?id=0">T-Shirts</a>
                 </li>
                 <li class="nav-item">
