--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -10,39 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Spotify integrated music shop based on your own taste!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">All</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html">T-Shirts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=1">Mugs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=2">CDs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="category.html?id=3">Vinyls</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav" style="margin-left: auto;">
-                <li class="nav-item">
-                    <a class="nav-link" href="cart.html">Cart</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<script src="js/nav-bar.js" defer></script>
 <div class="container mt-4">
     <h2 class="mb-4">Shopping Cart</h2>
 
