Fix the green colour problem

--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -12,14 +12,8 @@
 
 <script src="js/nav-bar.js" defer></script>
 <div class="container mt-4">
-    <h2 class="mb-4">Shopping Cart</h2>
-
-    <!-- Cart Items -->
-    <div id="cartItems">
-        <!-- Cart items will be dynamically added here -->
-    </div>
-
-    <!-- Checkout Button -->
+    <h2 class="mb-4" id="pageTitle">Shopping Cart</h2>
+    <div id="cartItems"></div>
     <button class="btn btn-primary mt-3" onclick="checkout()">Checkout</button>
 </div>
 
