--- a/ecommerce-frontend/index.html
+++ b/ecommerce-frontend/index.html
@@ -13,7 +13,7 @@
 
 <script src="js/nav-bar.js" defer></script>
 <div class="container mt-4">
-    <h2 class="mb-4">Featured Products</h2>
+    <h2 class="mb-4" id="pageTitle">Featured Products</h2>
     <div class="row" id="productList">
     </div>
 </div>
