Fix category titles

--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Spotify integrated music shop based on your own taste!</title>
     <link rel="icon" href="./images/online-store-icon-15.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
