--- a/ecommerce-frontend/category.html
+++ b/ecommerce-frontend/category.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotify T-Shirts</title>
+  <title>Spotify integrated music shop based on your own taste!</title>
   <link rel="icon" href="./images/online-store-icon-15.png" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -13,8 +13,10 @@
 
 <script src="js/nav-bar.js" defer></script>
 
-<div class="container mt-4" id="productList">
+<div class="container mt-4">
   <h2 class="mb-4" id="pageTitle"></h2>
+  <div class="row" id="productList">
+  </div>
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
