--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -15,7 +15,7 @@
 <div class="container mt-4">
     <h2 class="mb-4" id="pageTitle">Shopping Cart</h2>
     <div id="cartItems"></div>
-    <button class="btn btn-primary mt-3" onclick="checkout()">Checkout</button>
+    <button class="btn btn-success" onclick="checkout()">Checkout</button>
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
