--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -23,6 +23,9 @@
         </li>
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
+        <li class="nav-nav" style="margin-left: auto;">
+          <a class="nav-link" href="register.html">Register</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="cart.html">Cart</a>
         </li>
