--- a/ecommerce-frontend/register.html
+++ b/ecommerce-frontend/register.html
@@ -16,12 +16,13 @@
             <div class="form-floating mb-3 mt-3">
                 <input type="text" class="form-control" id="registrationEmail" placeholder="Enter email" name="email" required>
                 <label for="registrationEmail">Email</label>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-floating mt-3 mb-3">
-                <input type="text" class="form-control" id="registrationPassword" placeholder="Enter password" name="password" required>
+                <input type="password" class="form-control" id="registrationPassword" placeholder="Enter password" name="password" required>
                 <label for="registrationPassword">Password</label>
-                <small id="passwordWarning" class="text-danger">Password must be at least 8 characters long and must contain at least one letter and one digit.</small>
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Password must be at least 8 characters long and must contain at least one letter and one digit.
+                </small>
             </div>
             <div class="form-floating mb-3 mt-3">
                 <input type="text" class="form-control" id="firstName" placeholder="Enter first name" name="firstName" required>
@@ -37,21 +38,13 @@
             </div>
 
             <button type="submit" class="btn btn-success">Register</button>
-            <p class="mt-2">Already have an account? <span id="showLoginForm" style="cursor: pointer; color: blue; text-decoration: underline;">Login here</span></p>
-        </form>
-    </div>
 
-    <div class="container mt-3">
-        <form id="loginForm">
-            <div class="form-floating mb-3 mt-3">
-                <input type="text" class="form-control" id="loginEmail" placeholder="Enter email" name="email" required>
-                <label for="loginEmail">Email</label>
-            </div>
-            <div class="form-floating mt-3 mb-3">
-                <input type="text" class="form-control" id="loginPassword" placeholder="Enter password" name="password" required>
-                <label for="loginPassword">Password</label>
-            </div>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <p class="mt-2">Already have an account? <span id="loginForm" style="cursor: pointer; color: blue; text-decoration: underline;">Login here</span></p>
+            <script>
+                document.getElementById('loginForm').addEventListener('click', function() {
+                    window.location.href = 'login.html';
+                });
+            </script>
         </form>
     </div>
 
