--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -24,7 +24,10 @@
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-nav" style="margin-left: auto;">
-          <a class="nav-link" href="register.html">Register</a>
+          <a class="nav-link" id="registerLink" href="register.html">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="display: none;" id="userLink" href="#"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="cart.html">Cart</a>
