Fix cart products

--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -14,11 +14,12 @@
 <script src="js/nav-bar.js" defer></script>
 <div class="container mt-4">
     <h2 class="mb-4" id="pageTitle">Shopping Cart</h2>
-    <div id="cartItems"></div>
+    <div id="cartItems" class="col-md-5"></div>
     <button class="btn btn-success" onclick="checkout()">Checkout</button>
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/DOMFunctions.js"></script>
 <script src="js/cart.js"></script>
 </body>
 </html>
