--- a/ecommerce-frontend/category.html
+++ b/ecommerce-frontend/category.html
@@ -20,6 +20,7 @@
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/DOMFunctions.js"></script>
 <script type="module" src="js/category.js"></script>
 <script type="module" src="js/scripts.js"></script>
 </body>
