--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -23,11 +23,16 @@
         </li>
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
-        <li class="nav-nav" style="margin-left: auto;">
+        <li class="nav-item" style="margin-left: auto;">
           <a class="nav-link" id="registerLink" href="register.html">Register</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" style="display: none;" id="userLink" href="#"></a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="userLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display: none;"></a>
+            <div class="dropdown-menu" aria-labelledby="userLink">
+              <a class="dropdown-item" href="#" id="da_si_hodim">Log out</a>
+              <a class="dropdown-item" href="#">Spotify</a>
+              <a class="dropdown-item" href="#">Delivery</a>
+            </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="cart.html">Cart</a>
