Add address on registration (frontend)

--- a/ecommerce-frontend/register.html
+++ b/ecommerce-frontend/register.html
@@ -33,8 +33,20 @@
                 <label for="lastName">Last name</label>
             </div>
             <div class="form-floating mb-3 mt-3">
-                <input type="text" class="form-control" id="username" placeholder="Enter username" name="username" required>
-                <label for="username">Username</label>
+                <input type="text" class="form-control" id="phoneNumber" placeholder="Enter phone number" name="phoneNumber" required>
+                <label for="phoneNumber">Phone number</label>
+            </div>
+            <div class="form-floating mb-3 mt-3">
+                <input type="text" class="form-control" id="address" placeholder="Enter address" name="address" required>
+                <label for="address">Address</label>
+            </div>
+            <div class="form-floating mb-3 mt-3">
+                <input type="text" class="form-control" id="city" placeholder="Enter city" name="city" required>
+                <label for="city">City</label>
+            </div>
+            <div class="form-floating mb-3 mt-3">
+                <input type="text" class="form-control" id="country" placeholder="Enter country" name="country" required>
+                <label for="country">Country</label>
             </div>
 
             <button type="submit" class="btn btn-success">Register</button>
