--- a/ecommerce-frontend/cart.html
+++ b/ecommerce-frontend/cart.html
@@ -15,7 +15,9 @@
 <div class="container mt-4">
     <h2 class="mb-4" id="pageTitle">Shopping Cart</h2>
     <div id="cartItems" class="col-md-5"></div>
-    <button class="btn btn-success" onclick="checkout()">Checkout</button>
+    <form action="checkout.html">
+        <button type="submit" class="btn btn-success" id="checkout">Checkout</button>
+    </form>
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
