--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -22,6 +22,11 @@
           <a class="nav-link" href="category.html?id=3">Vinyls</a>
         </li>
       </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item" style="margin-left: auto;">
           <a class="nav-link" id="registerLink" href="register.html">Register</a>
