Put Bootstrap shadows on the registration form, login form and checkout form

--- a/ecommerce-frontend/checkout.html
+++ b/ecommerce-frontend/checkout.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container mt-3">
-    <form id="guestData" style="display: none;">
+    <form class="shadow p-3 mb-5 bg-body-tertiary rounded" id="guestData" style="display: none;">
       <h2 class="mb-4" id="pageTitle">Fill out the blank fields</h2>
       <div class="form-floating mb-3 mt-3">
         <input type="text" class="form-control" id="guestEmail" placeholder="Enter email" name="guestEmail" required>
@@ -45,6 +45,8 @@
       <button type="submit" class="btn btn-success">Submit</button>
     </form>
   </div>
+
+
   <script src="js/checkout.js"></script>
   <script src="js/nav-bar.js" defer></script>
 </body>
