--- a/ecommerce-frontend/login.html
+++ b/ecommerce-frontend/login.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container mt-3">
     <h2 class="mb-4" id="pageTitle">User Login</h2>
-    <form id="loginForm">
+    <form class="shadow p-3 mb-5 bg-body-tertiary rounded" id="loginForm">
       <div class="form-floating mb-3 mt-3">
         <input type="text" class="form-control" id="loginEmail" placeholder="Enter email" name="email" required>
         <label for="loginEmail">Email</label>
