--- a/ecommerce-frontend/register.html
+++ b/ecommerce-frontend/register.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container mt-3">
         <h2 class="mb-4" id="pageTitle">User Registration</h2>
-        <form id="registrationForm">
+        <form class="shadow p-3 mb-5 bg-body-tertiary rounded" id="registrationForm">
             <div class="form-floating mb-3 mt-3">
                 <input type="text" class="form-control" id="registrationEmail" placeholder="Enter email" name="email" required>
                 <label for="registrationEmail">Email</label>
