Spotify html page

--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -35,7 +35,7 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" id="userLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display: none;"></a>
             <div class="dropdown-menu" aria-labelledby="userLink">
               <a class="dropdown-item" href="#" id="da_si_hodim">Log out</a>
-              <a class="dropdown-item" href="#">Spotify</a>
+              <a class="dropdown-item" href="spotify.html">Spotify</a>
               <a class="dropdown-item" href="#">Delivery</a>
             </div>
         </li>
