Spotify backend (it connects with the Spotify page, but does not redirect back to the site in a correct way)

--- a/ecommerce-frontend/spotify.html
+++ b/ecommerce-frontend/spotify.html
@@ -14,20 +14,11 @@
 
 <div class="container mt-3">
     <h2 class="mb-4" id="pageTitle">Spotify Login</h2>
-    <form class="shadow p-3 mb-5 bg-body-tertiary rounded" id="spotifyLogin">
-        <div class="form-floating mb-3 mt-3">
-            <input type="text" class="form-control" id="spotifyEmail" placeholder="Enter email" name="email" required>
-            <label for="spotifyEmail">Email</label>
-        </div>
-
-        <div class="form-floating mt-3 mb-3">
-            <input type="password" class="form-control" id="spotifyPassword" placeholder="Enter password" name="password" required>
-            <label for="spotifyPassword">Password</label>
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-    </form>
-<!--    <img src="images/Spotify_Logo_RGB_Green.png" alt="Spotify png logo" style="max-width: 30%;"/>-->
+        <button type="submit" id="spotifyLoginButton" class="btn btn-success">Login in your Spotify account</button>
 </div>
+<br>
+<img src="images/Spotify_Logo_RGB_Green.png" alt="Spotify png logo" style="max-width: 30%;"/>
 
+<script type="module" src="js/spotify.js"></script>
 </body>
 </html>
