Trying to add a product successfully to the database (failing)

--- a/ecommerce-frontend/index.html
+++ b/ecommerce-frontend/index.html
@@ -57,6 +57,12 @@
                             <label for="productQuantity">Product quantity</label>
                         </div>
 
+                        <div class="form-floating mt-3 mb-3">
+                            <input type="file" class="form-control" id="productImage" name="productImage" accept="image/*" required>
+                            <label for="productImage">Product image</label>
+                        </div>
+
+
                         <button type="submit" class="btn btn-success">Add</button>
                     </form>
                 </div>
