--- a/ecommerce-frontend/productModal.html
+++ b/ecommerce-frontend/productModal.html
@@ -43,7 +43,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="addProduct">Save Changes</button>
+        <button type="button" class="btn btn-primary" id="saveProduct">Save Changes</button>
       </div>
 
     </div>
