--- a/ecommerce-frontend/nav-bar.html
+++ b/ecommerce-frontend/nav-bar.html
@@ -40,7 +40,7 @@
             <div class="dropdown-menu" aria-labelledby="userLink">
               <a class="dropdown-item" href="#" id="da_si_hodim">Log out</a>
               <a class="dropdown-item" href="spotify.html">Spotify</a>
-              <a class="dropdown-item" href="#">Delivery</a>
+              <a class="dropdown-item" href="orders.html">Orders</a>
             </div>
         </li>
         <li class="nav-item">
