Add bootstrap.bundle.min.js in the file, so that the user can click on his name in the nav-bar (there was a bug because this bootstrap file was missing)

--- a/ecommerce-frontend/spotify.html
+++ b/ecommerce-frontend/spotify.html
@@ -19,6 +19,7 @@
 <br>
 <img src="images/Spotify_Logo_RGB_Green.png" alt="Spotify png logo" style="max-width: 30%;"/>
 
+<script defer src="js/bootstrap.bundle.min.js"></script>
 <script type="module" src="js/spotify.js"></script>
 </body>
 </html>
